# pii-proxy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.changeset/: anthropic-passthrough-streaming.md  config.json  initial-release.md  openai-chat-completions-passthrough.md  republish-v0-2-1.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIG.md  INTEGRATIONS.md  MODELS.md
docs/announcements/: 2026-04-22-release.md
examples/: curl-quickstart.sh  docker-compose.yml  langchain-example.py  n8n-pii-proxy-workflow.json
examples/docker-compose-with-ollama/: README.md  docker-compose.yml
python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python/src/pii_proxy/: __init__.py  client.py
python/tests/: test_client.py
